--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "webcomponentsjs": "^0.7.22",
     "app-route": "PolymerElements/app-route#^0.9.2",
     "iron-selector": "PolymerElements/iron-selector#^1.5.2",
-    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0"
+    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0",
+    "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
+    "iron-image": "PolymerElements/iron-image#^1.2.3"
   }
 }
